--- a/code/parts/users/new.html
+++ b/code/parts/users/new.html
@@ -5,133 +5,73 @@
     </h2>
   </div>
 </div>
-
 <div class="row">
   <div class="col-md-12">
     <div class="panel panel-default">
       <div class="panel-heading">
-
         <div class="row">
           <div class="col-md-12">
             <div class="pull-left">
               <a ui-sref="^" class="btn btn-info">
-                <i class="glyphicon glyphicon-arrow-left"></i>&nbsp;
-                Back To List
+                <i class="glyphicon glyphicon-arrow-left"></i>&nbsp; Back To List
               </a>
             </div>
           </div>
         </div>
-
       </div>
       <div class="panel-body">
         <form name="createForm" class="form-horizontal">
           <div class="form-group">
-            <label for="email"
-                   popover-append-to-body="{{true}}"
-                   class="col-sm-2 control-label"
-                   popover-trigger="mouseenter"
-                   uib-popover="New user's email address - the address should be unique across the system">Email</label>
-
+            <label for="email" popover-append-to-body="{{true}}" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="New user's email address - the address should be unique across the system">Email</label>
             <div class="col-sm-10">
-              <input type="email"
-                     autofocus
-                     class="form-control"
-                     id="email"
-                     placeholder="Email"
-                     ng-model="model.email"
-                     ng-disabled="_loading">
+              <input type="email" autofocus class="form-control" id="email" placeholder="Email" ng-model="model.email" ng-disabled="_loading">
             </div>
           </div>
           <div class="form-group">
-            <label for="firstname"
-                   class="col-sm-2 control-label"
-                   popover-trigger="mouseenter"
-                   uib-popover="First name">First Name</label>
-
+            <label for="firstname" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="First name">First Name</label>
             <div class="col-sm-10">
-              <input type="text"
-                     class="form-control"
-                     id="firstname"
-                     placeholder="First Name"
-                     ng-model="model.firstname"
-                     ng-disabled="_loading">
+              <input type="text" class="form-control" id="firstname" placeholder="First Name" ng-model="model.firstname" ng-disabled="_loading">
             </div>
           </div>
           <div class="form-group">
-            <label for="lastName"
-                   class="col-sm-2 control-label"
-                   popover-trigger="mouseenter"
-                   uib-popover="Last name">Last Name</label>
-
+            <label for="lastName" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="Last name">Last Name</label>
             <div class="col-sm-10">
-              <input type="text"
-                     class="form-control"
-                     id="lastName"
-                     placeholder="Last Name"
-                     ng-model="model.lastname"
-                     ng-disabled="_loading">
+              <input type="text" class="form-control" id="lastName" placeholder="Last Name" ng-model="model.lastname" ng-disabled="_loading">
             </div>
           </div>
-
           <div class="form-group">
-            <label for="role"
-                   popover-append-to-body="{{true}}"
-                   class="col-sm-2 control-label"
-                   popover-trigger="mouseenter"
-                   uib-popover="Select here the user's role in management of the account">Role</label>
-
+            <label for="role" popover-append-to-body="{{true}}" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="Select here the user's role in management of the account">Role</label>
             <div class="col-sm-10">
-              <select class="form-control"
-                      id="role"
-                      ng-model="model.role"
-                      ng-disabled="_loading"
-                      ng-options="role for role in roles">
+              <select class="form-control" id="role" ng-model="model.role" ng-disabled="_loading" ng-options="role for role in roles">
                 <option value="">--- Select Role ---</option>
               </select>
             </div>
           </div>
-
           <div class="form-group" ng-if="auth.isReseller() || auth.isRevadmin()">
-            <label for="company"
-                   popover-append-to-body="{{true}}"
-                   class="col-sm-2 control-label"
-                   popover-trigger="mouseenter"
-                   uib-popover="Select here companies the user should be associated with">Company</label>
-
+            <label for="company" popover-append-to-body="{{true}}" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="Select here account the user should be associated with">Account</label>
             <div class="col-sm-10">
-              <select class="form-control"
-                      id="company"
-                      multiple
-                      ng-model="model.companyId"
-                      ng-disabled="_loading"
-                      ng-options="company.id as company.companyName for company in companies"></select>
+              <ui-select ng-show="!_loading && companies.length>0" multiple theme="bootstrap" class="form-control" ng-disabled="_loading" ng-model="model.companyId" id="company" on-select="onAccountSelect($model)">
+                <ui-select-match placeholder="Add account...">{{$item.companyName}}</ui-select-match>
+                <ui-select-choices repeat="item.id as  item in companies | filter: {companyName: $select.search}">
+                  <div ng-bind-html="item.companyName|highlight: $select.search"></div>
+                </ui-select-choices>
+              </ui-select>
             </div>
           </div>
-
           <div class="form-group">
-            <label for="domain"
-                   popover-append-to-body="{{true}}"
-                   class="col-sm-2 control-label"
-                   popover-trigger="mouseenter"
-                   uib-popover="Select domain names the user should be allowed to manage">Domains</label>
-
+            <label for="domain" popover-append-to-body="{{true}}" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="Select domain names the user should be allowed to manage">Domains</label>
             <div class="col-sm-10">
-              <select class="form-control"
-                      id="domain"
-                      multiple
-                      ng-model="model.domain"
-                      ng-disabled="_loading"
-                      ng-options="domain.domain_name as domain.domain_name for domain in domains"></select>
+              <ui-select ng-show="!_loading" multiple theme="bootstrap" class="form-control" ng-disabled="_loading" ng-model="model.domain" id="domain">
+                <ui-select-match placeholder="{{getDomainPlaceholder()}}">{{$item.domain_name}}</ui-select-match>
+                <ui-select-choices repeat="item.domain_name as item  in getAccountDomainNameList()| filter: {domain_name: $select.search}">
+                  <div ng-bind-html="item.domain_name|highlight: $select.search"></div>
+                </ui-select-choices>
+              </ui-select>
             </div>
           </div>
           <hr>
           <div class="form-group">
-            <label for="access_control_list"
-                   popover-append-to-body="{{true}}"
-                   class="col-sm-2 control-label"
-                   popover-trigger="mouseenter"
-                   uib-popover="Set here the new user's access control permissions">Access Control List</label>
-
+            <label for="access_control_list" popover-append-to-body="{{true}}" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="Set here the new user's access control permissions">Access Control List</label>
             <div class="col-sm-10">
               <div>
                 <input type="checkbox" disabled ng-model="model.access_control_list.dashBoard"> Dashboard
@@ -151,42 +91,23 @@
             </div>
           </div>
           <hr>
-
           <div class="form-group">
-            <label for="password"
-                   class="col-sm-2 control-label"
-                   popover-trigger="mouseenter"
-                   >Password</label>
-
+            <label for="password" class="col-sm-2 control-label" popover-trigger="mouseenter">Password</label>
             <div class="col-sm-10">
-              <input type="password"
-                     class="form-control"
-                     id="password"
-                     ng-model="model.password"
-                     ng-disabled="_loading"
-                     required="">
+              <input type="password" class="form-control" id="password" ng-model="model.password" ng-disabled="_loading" required="">
             </div>
           </div>
           <div class="form-group">
-            <label for="passwordConfirm"
-                   class="col-sm-2 control-label"
-                   popover-trigger="mouseenter"
-                   >Confirm Password</label>
-
+            <label for="passwordConfirm" class="col-sm-2 control-label" popover-trigger="mouseenter">Confirm Password</label>
             <div class="col-sm-10">
-              <input type="password"
-                     class="form-control"
-                     id="passwordConfirm"
-                     ng-model="model.passwordConfirm"
-                     ng-disabled="_loading">
+              <input type="password" class="form-control" id="passwordConfirm" ng-model="model.passwordConfirm" ng-disabled="_loading">
             </div>
           </div>
-
           <hr>
           <div class="form-group" ng-class="{ 'has-error': createForm.comment.$invalid &&
                                       createForm.comment.$dirty }">
             <label for="comment" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="Comment">Comment</label>
-            <div class="col-sm-5">
+            <div class="col-sm-10">
               <textarea id="comment" placeholder="Comment (max 300 symbol)" class="form-control" name="comment" ng-model="model.comment" ng-disabled="_loading">
               </textarea>
             </div>
@@ -195,18 +116,13 @@
           <div class="form-group">
             <div class="col-sm-offset-2 col-sm-10">
               <a ui-sref="{{state}}" class="btn btn-default">
-                <i class="glyphicon glyphicon-remove"></i>&nbsp;
-                Cancel
+                <i class="glyphicon glyphicon-remove"></i>&nbsp; Cancel
               </a>
-              <button class="btn btn-success"
-                      ng-disabled="disableSubmit(model)"
-                      ng-click="createUser(model)">
-                <i class="glyphicon glyphicon-ok"></i>&nbsp;
-                Create User
+              <button class="btn btn-success" ng-disabled="disableSubmit(model)" ng-click="createUser(model)">
+                <i class="glyphicon glyphicon-ok"></i>&nbsp; Create User
               </button>
             </div>
           </div>
-
         </form>
       </div>
     </div>
