--- a/code/dev/parts/dashboard/widgets/bluetriangletech/edit-bluetriangletech.html
+++ b/code/dev/parts/dashboard/widgets/bluetriangletech/edit-bluetriangletech.html
@@ -1,7 +1,14 @@
 <form role=form>
   <div class="form-group">
-    <label for="domain">Domain</label>
-    <div domain-select id="domain" ng-model="vm.domain" on-select="vm.onDomainSelected()" select-one="true"></div>
+    <label for="domain">Domain <small>(with BTT key)</small></label>
+    <div>
+      <ui-select ng-model="vm.domain" theme="select2" ng-disabled="vm.domains.length == 0" on-select="vm.onDomainSelected($model)" style="min-width: 300px;">
+        <ui-select-match placeholder="Select Domain">{{$select.selected.domain_name}}</ui-select-match>
+        <ui-select-choices repeat="item in vm.domains | filter: {domain_name: $select.search}">
+          <div ng-bind-html="item.domain_name|highlight: $select.search"></div>
+        </ui-select-choices>
+      </ui-select>
+    </div>
   </div>
   <div class="form-group">
     <label for="domain">Filters</label>
@@ -20,13 +27,5 @@
         <option ng-repeat="(key, item) in vm.refCountry" value="{{item}}">{{item}}</option>
       </select>
     </div>
-    <!--   <div class=form-group>
-    <label for=url>URL</label>
-    <input type=url class=form-control id=url ng-model=config.url placeholder=http://www.example.com>
-  </div>
-  <div class=form-group>
-    <label for=url>Height</label>
-    <input type=text class=form-control id=url ng-model=config.height>
-  </div> -->
   </div>
 </form>
