--- a/code/dev/parts/dashboard/widgets/bluetriangletech/view-iframe-bluetriangletech.tpl.html
+++ b/code/dev/parts/dashboard/widgets/bluetriangletech/view-iframe-bluetriangletech.tpl.html
@@ -1,6 +1,6 @@
-<div class="col-md-12" style="max-height: 395px;overflow: hidden;">
+<div class="col-md-12 bluetriangletech">
   <div class="alert alert-info" ng-if="!iframe.config.domain">
     Please click on <i class="glyphicon glyphicon-cog"></i> icon to configure the widget
   </div>
-  <iframe class="col-lg-12 col-md-12 col-sm-12"  ng-if="iframe.url && iframe.config.domain" class="adf-iframe" style="height: {{iframe.config.height}};border: 0px inset;min-height: 450px;" ng-src="{{iframe.url}}">Loading...</iframe>
+  <iframe class="col-lg-12 col-md-12 col-sm-12 " ng-if="iframe.url && iframe.config.domain" class="adf-iframe" style="height: {{iframe.config.height}};" ng-class="iframe.config.className" ng-src="{{iframe.url}}">Loading...</iframe>
 </div>
